--- a/es/index.html
+++ b/es/index.html
@@ -30,9 +30,12 @@
 </div>
         </div>
         <div class="project-card">
-            <img src="https://via.placeholder.com/600x450" alt="Proyecto 2">
-            <div class="overlay">
-                <div class="text">Diseño Gráfico</div>
+    <a href="/palomaaguado.github.io/es/proyectos/kukicha.html" style="text-decoration: none;">
+        <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Vivendex">
+        <div class="overlay">
+            <div class="text">
+                Vivendex<br>
+                <span style="font-size: 0.7rem; opacity: 0.8;">Más que una inmobiliaria</span>
             </div>
         </div>
         </main>
