--- a/es/index.html
+++ b/es/index.html
@@ -30,8 +30,8 @@
 </div>
         </div>
         <div class="project-card">
-    <a href="/palomaaguado.github.io/es/proyectos/kukicha.html" style="text-decoration: none;">
-        <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Vivendex">
+    <a href="/palomaaguado.github.io/es/vivendex.html" style="text-decoration: none;">
+        <img src="/palomaaguado.github.io/es/proyectos/feed Vivendex.jpg" alt="Vivendex">
         <div class="overlay">
             <div class="text">
                 Vivendex<br>
