--- a/en/index.html
+++ b/en/index.html
@@ -17,7 +17,7 @@
     </header>
     <main class="gallery">
    <div class="project-card">
-    <a href="https://palomitas09.github.io/palomaaguado.github.io/en/palomaaguado.github.io/en/kukicha.html" style="text-decoration: none;">
+    <a href="palomaaguado.github.io/en/kukicha.html" style="text-decoration: none;">
         <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha — Brand Identity">
         <div class="overlay">
             <div class="text">
