--- a/en/index.html
+++ b/en/index.html
@@ -12,7 +12,7 @@
       <nav>
     <a href="/palomaaguado.github.io/en/contact.html">Contact</a>
     <span style="margin: 0 10px; color: #ccc;">|</span>
-    <a href="/palomaaguado.github.io/en/index.html">Español</a>
+    <a href="/palomaaguado.github.io/es/index.html">Español</a>
 </nav>
     </header>
     <main class="gallery">
