--- a/es/vivendex.html
+++ b/es/vivendex.html
@@ -19,10 +19,10 @@
             <a href="/palomaaguado.github.io/es/contacto.html" style="text-decoration: none; color: white;">Contacto</a>
         </nav>
 		 <div class="hero-texto">
-      <h1>Marketing inmobiliario que convierte</h1>
+      <h1>Marketing inmobiliario</h1>
       <p>
         Creación de contenido visual y campañas digitales
-        para venta y alquiler de viviendas.
+        para venta y alquiler de inmuebles.
       </p>
     </div>
     </header>
@@ -42,8 +42,8 @@
     <div class="texto">
       <h2>Marketing inmobiliario</h2>
       <p>
-        Creación de contenido visual, anuncios en redes sociales
-        y optimización de campañas para venta y alquiler de viviendas.
+        Creación de contenido visual, publicidad en redes sociales
+        y optimización de campañas de venta y alquiler de inmuebles
       </p>
       <ul>
           <li>📸 Fotografía inmobiliaria</li>
@@ -81,7 +81,7 @@
   <section class="contacto">
     <h2>¿Hablamos?</h2>
     <p>Disponible para equipos inmobiliarios y agencias.</p>
-    <a href="mailto:email@email.com" class="btn">Contactar</a>
+    <a href="mailto:paloaglo@gmail.com" class="btn">Contactar</a>
   </section>
   
   <script>
