--- a/es/vivendex.html
+++ b/es/vivendex.html
@@ -35,7 +35,7 @@
 
     <!-- MEDIA PRINCIPAL -->
     <div class="media-principal" id="media-principal">
-      <img src="../proyectos/news.jpg" alt="Vivienda">
+      <img src="palomaaguado.github.io/es/proyectos/news.jpg" alt="Vivienda">
     </div>
 
     <!-- TEXTO -->
@@ -57,10 +57,10 @@
 
 <!-- GALERÍA -->
   <section class="miniaturas">
-    <img src="../proyectos/feed Vivendex.jpg" onclick="cambiarMedia(this)">>
-    <img src="../proyectos/retail.jpg" onclick="cambiarMedia(this)">>
-    <img src="../proyectos/santa caterina.jpg" onclick="cambiarMedia(this)">>
-    <img src="../proyectos/vendido.jpg" onclick="cambiarMedia(this)">>
+    <img src="palomaaguado.github.io/es/proyectos/feed Vivendex.jpg" onclick="cambiarMedia(this)">>
+    <img src=".palomaaguado.github.io/es/proyectos/retail.jpg" onclick="cambiarMedia(this)">>
+    <img src="palomaaguado.github.io/es/proyectos/santa caterina.jpg" onclick="cambiarMedia(this)">>
+    <img src="palomaaguado.github.io/es/proyectos/vendido.jpg" onclick="cambiarMedia(this)">>
 	
  
 <div class="video-thumb" onclick="cambiarMedia(this.querySelector('video'))">
