--- a/es/index.html
+++ b/es/index.html
@@ -30,7 +30,7 @@
 </div>
         </div>
         <div class="project-card">
-    <a href="/palomaaguado.github.io/es/vivendex.html" style="text-decoration: none;">
+    <a href="https://palomitas09.github.io/palomaaguado.github.io/es/vivendex.html" style="text-decoration: none;">
         <img src="/palomaaguado.github.io/es/proyectos/feed Vivendex.jpg" alt="Vivendex">
         <div class="overlay">
             <div class="text">
