--- a/es/vivendex.html
+++ b/es/vivendex.html
@@ -35,7 +35,7 @@
 
     <!-- MEDIA PRINCIPAL -->
     <div class="media-principal" id="media-principal">
-      <img src="palomaaguado.github.io/es/proyectos/news.jpg" alt="Vivienda">
+      <img src="/palomaaguado.github.io/es/proyectos/news.jpg" alt="Vivienda">
     </div>
 
     <!-- TEXTO -->
@@ -57,10 +57,10 @@
 
 <!-- GALERÍA -->
   <section class="miniaturas">
-    <img src="palomaaguado.github.io/es/proyectos/feed Vivendex.jpg" onclick="cambiarMedia(this)">>
-    <img src=".palomaaguado.github.io/es/proyectos/retail.jpg" onclick="cambiarMedia(this)">>
-    <img src="palomaaguado.github.io/es/proyectos/santa caterina.jpg" onclick="cambiarMedia(this)">>
-    <img src="palomaaguado.github.io/es/proyectos/vendido.jpg" onclick="cambiarMedia(this)">>
+    <img src="/palomaaguado.github.io/es/proyectos/feed Vivendex.jpg" onclick="cambiarMedia(this)">>
+    <img src="/palomaaguado.github.io/es/proyectos/retail.jpg" onclick="cambiarMedia(this)">>
+    <img src="/palomaaguado.github.io/es/proyectos/santa caterina.jpg" onclick="cambiarMedia(this)">>
+    <img src="/palomaaguado.github.io/es/proyectos/vendido.jpg" onclick="cambiarMedia(this)">>
 	
  
 <div class="video-thumb" onclick="cambiarMedia(this.querySelector('video'))">
@@ -120,7 +120,7 @@ function cambiarMedia(elemento) {
 <!-- CONTACTO 
     <section class="project-hero-blue">
         <h1>VIVENDEX</h1>
-        <p>Desarrollo de contenido visual y audiovisual para redes sociales de Vivendex, una inmobiliaria con un enfoque humano, donde la comunicación no se centra solo en inmuebles, sino también en las personas.</p>
+        <p>Desarrollo de contenido visual y audiovisual para redes sociales, una inmobiliaria con un enfoque humano, donde la comunicación no se centra solo en inmuebles, sino también en las personas.</p>
     </section>
 
     <main class="gallery-full">
