--- a/es/vivendex.html
+++ b/es/vivendex.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vivendex — Paloma Aguado</title>
-    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css?v=2.0">
+    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css?v=2.1">
     <style>
-        /* Estilos necesarios para el carrusel interactivo */
+        /* Ajuste de tamaño: carrusel más pequeño y centrado */
         .media-principal {
             width: 100%;
-            height: 550px;
+            max-width: 800px; /* Reducimos el ancho total */
+            height: 450px;    /* Reducimos el alto */
+            margin: 20px auto; 
             background: #f4f4f4;
             display: flex;
             align-items: center;
@@ -17,51 +19,55 @@
             overflow: hidden;
             border-radius: 8px;
             transition: opacity 0.3s ease;
-            margin-top: 20px;
         }
         .media-principal img, .media-principal video {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain; /* Cambiado a 'contain' para que la foto se vea completa sin cortes */
+            background: #f4f4f4;
         }
+
+        /* Miniaturas más discretas */
         .miniaturas {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-            gap: 15px;
-            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            flex-wrap: wrap;
             margin-bottom: 50px;
         }
         .miniaturas img, .miniaturas .video-thumb {
-            width: 100%;
-            height: 100px;
+            width: 80px; /* Más pequeñas */
+            height: 80px;
             object-fit: cover;
             cursor: pointer;
             border-radius: 4px;
             opacity: 0.6;
-            transition: 0.3s;
-            background: #000;
         }
-        .miniaturas img:hover, .miniaturas .video-thumb:hover {
-            opacity: 1;
+
+        /* SECCIÓN TIKTOK / REELS (Verticales) */
+        .tiktok-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin-top: 40px;
         }
-        .video-thumb video {
+        .tiktok-item video {
             width: 100%;
-            height: 100%;
+            aspect-ratio: 9 / 16; /* Formato vertical TikTok */
+            background: black;
+            border-radius: 12px;
             object-fit: cover;
-            pointer-events: none; /* Evita que el vídeo interfiera con el clic del div */
         }
     </style>
 </head>
 <body style="margin:0; padding:0; background-color: white; font-family: sans-serif;">
 
-    <header style="background-color: #0088bc; color: white; padding: 60px 5%; text-align: center;">
-        <div class="logo" style="margin-bottom: 30px;">
-            <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: white; font-weight: bold; letter-spacing: 2px;">PALOMA AGUADO</a>
+    <header style="background-color: #0088bc; color: white; padding: 50px 5%; text-align: center;">
+        <div class="logo" style="margin-bottom: 20px;">
+            <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: white; font-weight: bold;">PALOMA AGUADO</a>
         </div>
-        <h1 style="font-size: 2.5rem; text-transform: uppercase; margin-bottom: 15px;">Marketing inmobiliario</h1>
-        <p style="max-width: 700px; margin: 0 auto; opacity: 0.9; line-height: 1.6;">
-            Creación de contenido visual y campañas para Vivendex.
-        </p>
+        <h1 style="font-size: 2.2rem; text-transform: uppercase;">Marketing inmobiliario</h1>
+        <p style="opacity: 0.9;">Vivendex: Contenido Audiovisual & Social Media</p>
     </header>
 
     <nav style="padding: 20px 5%;">
@@ -71,7 +77,7 @@
     <main style="max-width: 1000px; margin: 0 auto; padding: 0 20px;">
         
         <div class="media-principal" id="media-principal">
-            <img src="/palomaaguado.github.io/es/proyectos/news.jpg" alt="Vivienda">
+            <img src="/palomaaguado.github.io/es/proyectos/news.jpg" alt="Vivendex">
         </div>
 
         <section class="miniaturas">
@@ -80,30 +86,27 @@
             <img src="/palomaaguado.github.io/es/proyectos/retail.jpg" onclick="cambiarMedia(this)">
             <img src="/palomaaguado.github.io/es/proyectos/santa%20caterina.jpg" onclick="cambiarMedia(this)">
             <img src="/palomaaguado.github.io/es/proyectos/vendido.jpg" onclick="cambiarMedia(this)">
-            
-            <div class="video-thumb" onclick="cambiarVideo('/palomaaguado.github.io/es/proyectos/43.mp4')">
-                <video muted>
-                    <source src="/palomaaguado.github.io/es/proyectos/43.mp4" type="video/mp4">
+        </section>
+
+        <h2 style="color: #0088bc; text-align: center; margin-top: 80px;">TikTok & Reels</h2>
+        <section class="tiktok-grid">
+            <div class="tiktok-item">
+                <video controls muted loop>
+                    <source src="/palomaaguado.github.io/es/proyectos/tiktok1.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="tiktok-item">
+                <video controls muted loop>
+                    <source src="/palomaaguado.github.io/es/proyectos/tiktok2.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="tiktok-item">
+                <video controls muted loop>
+                    <source src="/palomaaguado.github.io/es/proyectos/tiktok3.mp4" type="video/mp4">
                 </video>
             </div>
         </section>
 
-        <section style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-bottom: 80px;">
-            <div>
-                <h2 style="color: #0088bc;">Dirección Creativa</h2>
-                <p style="color: #444; line-height: 1.8;">
-                    Desarrollo de una narrativa visual coherente para el sector inmobiliario, enfocada en la calidad y el lado humano de la marca.
-                </p>
-            </div>
-            <div style="background: #f9f9f9; padding: 25px; border-radius: 8px;">
-                <p><strong>Servicios:</strong></p>
-                <ul style="color: #666; font-size: 0.9rem;">
-                    <li>Fotografía Inmobiliaria</li>
-                    <li>Vídeo Marketing</li>
-                    <li>Social Media Strategy</li>
-                </ul>
-            </div>
-        </section>
     </main>
 
     <footer style="text-align: center; padding: 60px 0; color: #ccc; font-size: 0.8rem;">
@@ -112,24 +115,12 @@
 
     <script>
         const contenedor = document.getElementById("media-principal");
-
         function cambiarMedia(elemento) {
             contenedor.style.opacity = 0;
             setTimeout(() => {
-                contenedor.innerHTML = `<img src="${elemento.src}" alt="Vivendex">`;
+                contenedor.innerHTML = `<img src="${elemento.src}" style="width:100%; height:100%; object-fit:contain;">`;
                 contenedor.style.opacity = 1;
-            }, 300);
-        }
-
-        function cambiarVideo(srcVideo) {
-            contenedor.style.opacity = 0;
-            setTimeout(() => {
-                contenedor.innerHTML = `
-                    <video autoplay loop muted playsinline>
-                        <source src="${srcVideo}" type="video/mp4">
-                    </video>`;
-                contenedor.style.opacity = 1;
-            }, 300);
+            }, 250);
         }
     </script>
 </body>
