--- a/es/vivendex.html
+++ b/es/vivendex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vivendex — Paloma Aguado</title>
+    <title>Vivendex</title>
     <link rel="stylesheet" href="/palomaaguado.github.io/styles.css?v=2.0">
     <style>
         /* Estilos necesarios para el carrusel interactivo */
@@ -137,17 +137,32 @@
             <div class="tiktok-grid">
                 <div class="tiktok-item">
                     <video controls muted loop playsinline>
-                        <source src="/palomaaguado.github.io/es/proyectos/tiktok1.mp4" type="video/mp4">
+                        <source src="https://www.tiktok.com/@vivendex/video/7385555001860508961?is_from_webapp=1&sender_device=pc&web_id=7066858662128289286" type="video/mp4">
                     </video>
                 </div>
                 <div class="tiktok-item">
                     <video controls muted loop playsinline>
-                        <source src="/palomaaguado.github.io/es/proyectos/tiktok2.mp4" type="video/mp4">
+                        <source src="https://www.tiktok.com/@vivendex/video/7384440948404522272?is_from_webapp=1&sender_device=pc&web_id=7066858662128289286" type="video/mp4">
                     </video>
                 </div>
                 <div class="tiktok-item">
                     <video controls muted loop playsinline>
-                        <source src="/palomaaguado.github.io/es/proyectos/tiktok3.mp4" type="video/mp4">
+                        <source src="https://www.tiktok.com/@vivendex/video/7388460925130460449?is_from_webapp=1&sender_device=pc&web_id=7066858662128289286" type="video/mp4">
+                    </video>
+                </div>
+                <div class="tiktok-item">
+                    <video controls muted loop playsinline>
+                        <source src="https://www.tiktok.com/@vivendex/video/7412349704241024289?is_from_webapp=1&sender_device=pc&web_id=7066858662128289286" type="video/mp4">
+                    </video>
+                </div>
+                 <div class="tiktok-item">
+                    <video controls muted loop playsinline>
+                        <source src="https://www.tiktok.com/@vivendex/video/7426079698876206368?is_from_webapp=1&sender_device=pc&web_id=7066858662128289286" type="video/mp4">
+                    </video>
+                </div>
+                <div class="tiktok-item">
+                    <video controls muted loop playsinline>
+                        <source src="https://www.tiktok.com/@vivendex/video/7429682503197248800?is_from_webapp=1&sender_device=pc&web_id=7066858662128289286" type="video/mp4">
                     </video>
                 </div>
             </div>
