--- a/es/vivendex.html
+++ b/es/vivendex.html
@@ -132,41 +132,50 @@
             </div>
         </section>
 
-        <section class="tiktok-section">
-            <h2 class="tiktok-title">TikTok & Reels</h2>
-            <div class="tiktok-grid">
-                <div class="tiktok-item">
-                    <video controls muted loop playsinline>
-                        <source src="https://www.tiktok.com/@vivendex/video/7385555001860508961?is_from_webapp=1&sender_device=pc&web_id=7066858662128289286" type="video/mp4">
-                    </video>
-                </div>
-                <div class="tiktok-item">
-                    <video controls muted loop playsinline>
-                        <source src="https://www.tiktok.com/@vivendex/video/7384440948404522272?is_from_webapp=1&sender_device=pc&web_id=7066858662128289286" type="video/mp4">
-                    </video>
-                </div>
-                <div class="tiktok-item">
-                    <video controls muted loop playsinline>
-                        <source src="https://www.tiktok.com/@vivendex/video/7388460925130460449?is_from_webapp=1&sender_device=pc&web_id=7066858662128289286" type="video/mp4">
-                    </video>
-                </div>
-                <div class="tiktok-item">
-                    <video controls muted loop playsinline>
-                        <source src="https://www.tiktok.com/@vivendex/video/7412349704241024289?is_from_webapp=1&sender_device=pc&web_id=7066858662128289286" type="video/mp4">
-                    </video>
-                </div>
-                 <div class="tiktok-item">
-                    <video controls muted loop playsinline>
-                        <source src="https://www.tiktok.com/@vivendex/video/7426079698876206368?is_from_webapp=1&sender_device=pc&web_id=7066858662128289286" type="video/mp4">
-                    </video>
-                </div>
-                <div class="tiktok-item">
-                    <video controls muted loop playsinline>
-                        <source src="https://www.tiktok.com/@vivendex/video/7429682503197248800?is_from_webapp=1&sender_device=pc&web_id=7066858662128289286" type="video/mp4">
-                    </video>
-                </div>
-            </div>
-        </section>
+     <section class="tiktok-section">
+    <h2 class="tiktok-title">TikTok & Reels</h2>
+    <div class="tiktok-grid">
+        
+        <div class="tiktok-item">
+            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@vivendex/video/7385555001860508961" data-video-id="7385555001860508961">
+                <section></section>
+            </blockquote>
+        </div>
+
+        <div class="tiktok-item">
+            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@vivendex/video/7384440948404522272" data-video-id="7384440948404522272">
+                <section></section>
+            </blockquote>
+        </div>
+
+        <div class="tiktok-item">
+            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@vivendex/video/7388460925130460449" data-video-id="7388460925130460449">
+                <section></section>
+            </blockquote>
+        </div>
+
+        <div class="tiktok-item">
+            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@vivendex/video/7412349704241024289" data-video-id="7412349704241024289">
+                <section></section>
+            </blockquote>
+        </div>
+
+        <div class="tiktok-item">
+            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@vivendex/video/7426079698876206368" data-video-id="7426079698876206368">
+                <section></section>
+            </blockquote>
+        </div>
+
+        <div class="tiktok-item">
+            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@vivendex/video/7429682503197248800" data-video-id="7429682503197248800">
+                <section></section>
+            </blockquote>
+        </div>
+
+    </div>
+    <script async src="https://www.tiktok.com/embed.js"></script>
+</section>
+    
 
     </main>
 
