--- a/es/vivendex.html
+++ b/es/vivendex.html
@@ -83,11 +83,11 @@
 
     <header style="background-color: #0088bc; color: white; padding: 60px 5%; text-align: center;">
         <div class="logo" style="margin-bottom: 30px;">
-            <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: white; font-weight: bold; letter-spacing: 2px;">PALOMA AGUADO</a>
+            <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: white; font-weight: bold; letter-spacing: 2px;">VIVENDEX</a>
         </div>
         <h1 style="font-size: 2.5rem; text-transform: uppercase; margin-bottom: 15px;">Marketing inmobiliario</h1>
         <p style="max-width: 700px; margin: 0 auto; opacity: 0.9; line-height: 1.6;">
-            Creación de contenido visual y campañas para Vivendex.
+            Creación de contenido visual y campañas.
         </p>
     </header>
 
