--- a/es/vivendex.html
+++ b/es/vivendex.html
@@ -117,20 +117,21 @@
 
         <section style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-bottom: 40px;">
             <div>
-                <h2 style="color: #0088bc;">Dirección Creativa</h2>
+                <h2 style="color: #0088bc;">Dirección Creativa y Estrategia Visual</h2>
                 <p style="color: #444; line-height: 1.8;">
-                    Desarrollo de una narrativa visual coherente para el sector inmobiliario, enfocada en la calidad y el lado humano de la marca.
+                    Desarrollo de una narrativa visual coherente centrada en el enfoque humano de la marca. Me encargué de la planificación estratégica y ejecución de contenido audiovisual, asegurando una identidad visual unificada mediante la creación de dossieres, catálogos y plantillas corporativas
                 </p>
             </div>
             <div style="background: #f9f9f9; padding: 25px; border-radius: 8px;">
-                <p><strong>Servicios:</strong></p>
-                <ul style="color: #666; font-size: 0.9rem;">
-                    <li>Fotografía Inmobiliaria</li>
-                    <li>Vídeo Marketing</li>
-                    <li>Social Media Strategy</li>
-                </ul>
-            </div>
-        </section>
+        <p><strong>Impacto y Gestión:</strong></p>
+        <ul style="color: #666; font-size: 0.9rem; line-height: 1.6;">
+            <li><strong>Social Media & Ads:</strong> Gestión de campañas en Meta Business.</li>
+            <li><strong>Automatización:</strong> Interacción con el usuario mediante ManyChat.</li>
+            <li><strong>Email Marketing:</strong> Diseño de boletines y contenido para blogs.</li>
+            <li><strong>Producción:</strong> Contenido multimedia especializado en Real Estate.</li>
+        </ul>
+    </div>
+</section>
 
      <section class="tiktok-section">
     <h2 class="tiktok-title">TikTok & Reels</h2>
