--- a/en/index.html
+++ b/en/index.html
@@ -28,10 +28,13 @@
     </a>
 </div>
         </div>
-        <div class="project-card">
-            <img src="https://preview.redd.it/my-top-9-favorite-jp-w-dinosaurs-v0-e3ld6w2gg7xe1.gif?width=618&auto=webp&s=0aae0afe1121ca0cfec1994d2922da8ab29fb32a" alt="Project 2">
-            <div class="overlay">
-                <div class="text">Graphic Design</div>
+          <div class="project-card">
+    <a href="vivendex.html" style="text-decoration: none;">
+        <img src="/palomaaguado.github.io/es/proyectos/feed Vivendex.jpg" alt="Vivendex">
+        <div class="overlay">
+            <div class="text">
+                Vivendex<br>
+                <span style="font-size: 0.7rem; opacity: 0.8;">More than a real estate agency</span>
             </div>
         </div>
     </main>
