--- a/en/index.html
+++ b/en/index.html
@@ -29,7 +29,7 @@
 </div>
         </div>
           <div class="project-card">
-    <a href="vivendex.html" style="text-decoration: none;">
+    <a href="/palomaaguado.github.io/en/vivendex.html" style="text-decoration: none;">
         <img src="/palomaaguado.github.io/es/proyectos/feed Vivendex.jpg" alt="Vivendex">
         <div class="overlay">
             <div class="text">
