--- a/en/index.html
+++ b/en/index.html
@@ -29,8 +29,8 @@
 </div>
         </div>
           <div class="project-card">
-    <a href="/palomaaguado.github.io/en/vivendex.html" style="text-decoration: none;">
-        <img src="/palomaaguado.github.io/es/proyectos/feed Vivendex.jpg" alt="Vivendex">
+    <a href="https://palomitas09.github.io/palomaaguado.github.io/en/vivendex.html" style="text-decoration: none;">
+        <img src="/palomaaguado.github.io/es/proyectos/feed20%Vivendex.jpg" alt="Vivendex">
         <div class="overlay">
             <div class="text">
                 Vivendex<br>
