--- a/es/index.html
+++ b/es/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="project-card">
     <a href="/palomaaguado.github.io/es/vivendex.html" style="text-decoration: none;">
-        <img src="/palomaaguado.github.io/es/proyectos/feed Vivendex.jpg" alt="Vivendex">
+        <img src="/palomaaguado.github.io/es/proyectos/feed20%Vivendex.jpg" alt="Vivendex">
         <div class="overlay">
             <div class="text">
                 Vivendex<br>
@@ -39,7 +39,7 @@
             </div>
              <div class="project-card">
     <a href="/palomaaguado.github.io/es/cafur.html" style="text-decoration: none;">
-        <img src="/palomaaguado.github.io/es/proyectos/feed Vivendex.jpg" alt="Vivendex">
+        <img src="/palomaaguado.github.io/es/proyectos/feed20%Vivendex.jpg" alt="Cafur">
         <div class="overlay">
             <div class="text">
                 Cafur<br>
