--- a/es/index.html
+++ b/es/index.html
@@ -36,16 +36,21 @@
             <div class="text">
                 Vivendex<br>
                 <span style="font-size: 0.7rem; opacity: 0.8;">Más que una inmobiliaria</span>
-            </div>
-             <div class="project-card">
-    <a href="/palomaaguado.github.io/es/cafur.html" style="text-decoration: none;">
-        <img src="/palomaaguado.github.io/es/proyectos/feed20%Vivendex.jpg" alt="Cafur">
-        <div class="overlay">
-            <div class="text">
-                Cafur<br>
-                <span style="font-size: 0.7rem; opacity: 0.8;">Servicios inmobiliarios</span>
-            </div>
+         </div>
+                </div>
+            </a>
         </div>
-        </main>
+            <div class="project-card">
+            <a href="/palomaaguado.github.io/es/cafur.html" style="text-decoration: none;">
+                <img src="/palomaaguado.github.io/es/proyectos/feed%20Vivendex.jpg" alt="Cafur">
+                <div class="overlay">
+                    <div class="text">
+                        Cafur<br>
+                        <span style="font-size: 0.7rem; opacity: 0.8;">Servicios inmobiliarios</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </main>
 </body>
 </html>
