--- a/es/index.html
+++ b/es/index.html
@@ -29,28 +29,26 @@
     </a>
 </div>
         </div>
-        <div class="project-card">
-    <a href="/palomaaguado.github.io/es/vivendex.html" style="text-decoration: none;">
-        <img src="/palomaaguado.github.io/es/proyectos/feed20%Vivendex.jpg" alt="Vivendex">
-        <div class="overlay">
-            <div class="text">
-                Vivendex<br>
-                <span style="font-size: 0.7rem; opacity: 0.8;">Más que una inmobiliaria</span>
-         </div>
+     <a href="/palomaaguado.github.io/es/vivendex.html" style="text-decoration: none;">
+                <img src="/palomaaguado.github.io/es/proyectos/feed%20Vivendex.jpg" alt="Vivendex">
+                <div class="overlay">
+                    <div class="text">
+                        Vivendex<br>
+                        <span style="font-size: 0.7rem; opacity: 0.8;">Dirección Creativa</span>
+                    </div>
                 </div>
             </a>
         </div>
-            <div class="project-card">
+
+        <div class="project-card">
             <a href="/palomaaguado.github.io/es/cafur.html" style="text-decoration: none;">
-                <img src="/palomaaguado.github.io/es/proyectos/feed%20Vivendex.jpg" alt="Cafur">
+                <img src="/palomaaguado.github.io/es/proyectos/retail.jpg" alt="Cafur">
                 <div class="overlay">
                     <div class="text">
                         Cafur<br>
-                        <span style="font-size: 0.7rem; opacity: 0.8;">Servicios inmobiliarios</span>
+                        <span style="font-size: 0.7rem; opacity: 0.8;">Estrategia & Fotografía</span>
                     </div>
                 </div>
             </a>
         </div>
     </main>
-</body>
-</html>
