--- a/es/index.html
+++ b/es/index.html
@@ -16,21 +16,22 @@
 </nav>
     </header>
 
-   <main class="gallery">
-   <div class="project-card">
-    <a href="/palomaaguado.github.io/es/proyectos/kukicha.html" style="text-decoration: none;">
-        <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha — Identidad de marca">
-        <div class="overlay">
-            <div class="text">
-                Kukicha<br>
-                <span style="font-size: 0.7rem; opacity: 0.8;">Identidad de Marca</span>
-            </div>
+  <main class="gallery">
+        <div class="project-card">
+            <a href="/palomaaguado.github.io/es/proyectos/kukicha.html" style="text-decoration: none;">
+                <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha — Identidad de marca">
+                <div class="overlay">
+                    <div class="text">
+                        Kukicha<br>
+                        <span style="font-size: 0.7rem; opacity: 0.8;">Identidad de Marca</span>
+                    </div>
+                </div>
+            </a>
         </div>
-    </a>
-</div>
-        </div>
-     <a href="/palomaaguado.github.io/es/vivendex.html" style="text-decoration: none;">
-                <img src="/palomaaguado.github.io/es/proyectos/retail.jpg" alt="Vivendex">
+
+        <div class="project-card">
+            <a href="/palomaaguado.github.io/es/vivendex.html" style="text-decoration: none;">
+                <img src="/palomaaguado.github.io/es/proyectos/feed%20Vivendex.jpg" alt="Vivendex">
                 <div class="overlay">
                     <div class="text">
                         Vivendex<br>
