--- a/es/index.html
+++ b/es/index.html
@@ -18,36 +18,36 @@
 
   <main class="gallery">
         <div class="project-card">
-            <a href="/palomaaguado.github.io/es/proyectos/kukicha.html" style="text-decoration: none;">
-                <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha — Identidad de marca">
+            <a href="/palomaaguado.github.io/es/proyectos/kukicha.html">
+                <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha">
                 <div class="overlay">
                     <div class="text">
                         Kukicha<br>
-                        <span style="font-size: 0.7rem; opacity: 0.8;">Identidad de Marca</span>
+                        <span>Identidad de Marca</span>
                     </div>
                 </div>
             </a>
         </div>
 
         <div class="project-card">
-            <a href="/palomaaguado.github.io/es/vivendex.html" style="text-decoration: none;">
+            <a href="/palomaaguado.github.io/es/vivendex.html">
                 <img src="/palomaaguado.github.io/es/proyectos/feed%20Vivendex.jpg" alt="Vivendex">
                 <div class="overlay">
                     <div class="text">
                         Vivendex<br>
-                        <span style="font-size: 0.7rem; opacity: 0.8;">Dirección Creativa</span>
+                        <span>Dirección Creativa</span>
                     </div>
                 </div>
             </a>
         </div>
 
         <div class="project-card">
-            <a href="/palomaaguado.github.io/es/cafur.html" style="text-decoration: none;">
+            <a href="/palomaaguado.github.io/es/cafur.html">
                 <img src="/palomaaguado.github.io/es/proyectos/retail.jpg" alt="Cafur">
                 <div class="overlay">
                     <div class="text">
                         Cafur<br>
-                        <span style="font-size: 0.7rem; opacity: 0.8;">Estrategia & Fotografía</span>
+                        <span>Estrategia & Fotografía</span>
                     </div>
                 </div>
             </a>
