--- a/es/cafur.html
+++ b/es/cafur.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafur — Paloma Aguado</title>
-    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css?v=3.3">
+    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css?v=3.4">
     <style>
-        /* Estructura del carrusel */
+        /* Estructura del carrusel de imágenes */
         .media-principal {
             width: 100%;
-            height: 550px;
+            height: 600px;
             background: #f4f4f4;
             display: flex;
             align-items: center;
@@ -19,14 +19,15 @@
             transition: opacity 0.3s ease;
             margin-top: 20px;
         }
-        .media-principal img, .media-principal video {
+        .media-principal img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain; /* Para que se vea el post entero sin recortar */
+            background: #ffffff;
         }
         .miniaturas {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
             gap: 15px;
             margin: 20px 0 50px 0;
         }
@@ -38,12 +39,14 @@
             border-radius: 4px;
             opacity: 0.6;
             transition: 0.3s;
+            border: 2px solid transparent;
         }
-        .miniaturas img:hover { opacity: 1; }
+        .miniaturas img:hover { 
+            opacity: 1; 
+            border-color: #003366;
+        }
 
-        /* AZUL DIFERENCIAL DE CAFUR (Navy Blue) */
         .cafur-blue-text { color: #003366; } 
-        .bg-cafur-blue { background-color: #003366; }
     </style>
 </head>
 <body style="margin:0; padding:0; background-color: white; font-family: sans-serif;">
@@ -65,14 +68,15 @@
     <main style="max-width: 1000px; margin: 0 auto; padding: 0 20px;">
         
         <div class="media-principal" id="media-principal">
-            <img src="/palomaaguado.github.io/es/proyectos/cafur-portada.jpg" alt="Cafur Portfolio">
+            <img src="/palomaaguado.github.io/es/proyectos/ig-cafur-1.jpg" alt="Cafur Instagram Post">
         </div>
 
         <section class="miniaturas">
-            <img src="/palomaaguado.github.io/es/proyectos/cafur1.jpg" onclick="cambiarMedia(this)">
-            <img src="/palomaaguado.github.io/es/proyectos/cafur2.jpg" onclick="cambiarMedia(this)">
-            <img src="/palomaaguado.github.io/es/proyectos/cafur3.jpg" onclick="cambiarMedia(this)">
-            <img src="/palomaaguado.github.io/es/proyectos/cafur4.jpg" onclick="cambiarMedia(this)">
+            <img src="/palomaaguado.github.io/es/proyectos/ig-cafur-1.jpg" onclick="cambiarMedia(this.src)">
+            <img src="/palomaaguado.github.io/es/proyectos/ig-cafur-2.jpg" onclick="cambiarMedia(this.src)">
+            <img src="/palomaaguado.github.io/es/proyectos/ig-cafur-3.jpg" onclick="cambiarMedia(this.src)">
+            <img src="/palomaaguado.github.io/es/proyectos/ig-cafur-4.jpg" onclick="cambiarMedia(this.src)">
+            <img src="/palomaaguado.github.io/es/proyectos/ig-cafur-5.jpg" onclick="cambiarMedia(this.src)">
         </section>
 
         <section style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-bottom: 80px;">
@@ -99,7 +103,7 @@
             <a href="TU_ENLACE_CANVA" target="_blank" style="display: inline-block; padding: 15px 35px; background: #003366; color: white; text-decoration: none; border-radius: 5px; font-weight: bold; transition: 0.3s;">Ver Proyecto en Canva</a>
         </section>
 
-    </main>
+        </main>
 
     <footer style="text-align: center; padding: 60px 0; color: #ccc; font-size: 0.8rem; border-top: 1px solid #eee;">
         <p>&copy; 2025 Paloma Aguado | Real Estate Marketing Specialist</p>
@@ -107,10 +111,10 @@
 
     <script>
         const contenedor = document.getElementById("media-principal");
-        function cambiarMedia(elemento) {
+        function cambiarMedia(src) {
             contenedor.style.opacity = 0;
             setTimeout(() => {
-                contenedor.innerHTML = `<img src="${elemento.src}" alt="Cafur Project">`;
+                contenedor.innerHTML = `<img src="${src}" alt="Cafur Project">`;
                 contenedor.style.opacity = 1;
             }, 300);
         }
