--- a/es/cafur.html
+++ b/es/cafur.html
@@ -72,11 +72,13 @@
         </div>
 
         <section class="miniaturas">
-            <img src="/palomaaguado.github.io/es/proyectos/ig-cafur-1.jpg" onclick="cambiarMedia(this.src)">
-            <img src="/palomaaguado.github.io/es/proyectos/ig-cafur-2.jpg" onclick="cambiarMedia(this.src)">
-            <img src="/palomaaguado.github.io/es/proyectos/ig-cafur-3.jpg" onclick="cambiarMedia(this.src)">
-            <img src="/palomaaguado.github.io/es/proyectos/ig-cafur-4.jpg" onclick="cambiarMedia(this.src)">
-            <img src="/palomaaguado.github.io/es/proyectos/ig-cafur-5.jpg" onclick="cambiarMedia(this.src)">
+            <img src="/palomaaguado.github.io/es/proyectos/cafur1.jpg" onclick="cambiarMedia(this.src)">
+            <img src="/palomaaguado.github.io/es/proyectos/cafur2.jpg" onclick="cambiarMedia(this.src)">
+            <img src="/palomaaguado.github.io/es/proyectos/cafur3.jpg" onclick="cambiarMedia(this.src)">
+            <img src="/palomaaguado.github.io/es/proyectos/cafur4.jpg" onclick="cambiarMedia(this.src)">
+            <img src="/palomaaguado.github.io/es/proyectos/cafur5.jpg" onclick="cambiarMedia(this.src)">
+            <img src="/palomaaguado.github.io/es/proyectos/cafur6.jpg" onclick="cambiarMedia(this.src)">
+            <img src="/palomaaguado.github.io/es/proyectos/cafur7.jpg" onclick="cambiarMedia(this.src)">
         </section>
 
         <section style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-bottom: 80px;">
