--- a/es/cafur.html
+++ b/es/cafur.html
@@ -68,7 +68,7 @@
     <main style="max-width: 1000px; margin: 0 auto; padding: 0 20px;">
         
         <div class="media-principal" id="media-principal">
-            <img src="/palomaaguado.github.io/es/proyectos/ig-cafur-1.jpg" alt="Cafur Instagram Post">
+            <img src="/palomaaguado.github.io/es/proyectos/cafur1.jpg" alt="Cafur Instagram Post">
         </div>
 
         <section class="miniaturas">
