--- a/es/cafur.html
+++ b/es/cafur.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafur — Paloma Aguado</title>
-    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css?v=3.4">
+    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css?v=3.6">
     <style>
-        /* Estructura del carrusel de imágenes */
+        /* Estructura del carrusel de imágenes superior */
         .media-principal {
             width: 100%;
             height: 600px;
@@ -22,7 +22,7 @@
         .media-principal img {
             width: 100%;
             height: 100%;
-            object-fit: contain; /* Para que se vea el post entero sin recortar */
+            object-fit: contain;
             background: #ffffff;
         }
         .miniaturas {
@@ -41,9 +41,21 @@
             transition: 0.3s;
             border: 2px solid transparent;
         }
-        .miniaturas img:hover { 
-            opacity: 1; 
-            border-color: #003366;
+        .miniaturas img:hover { opacity: 1; border-color: #003366; }
+
+        /* Estilo para la nueva sección de Vídeos/Reels */
+        .reels-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
+            margin-bottom: 80px;
+        }
+        .reel-card {
+            background: #fff;
+            border-radius: 12px;
+            padding: 10px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+            text-align: center;
         }
 
         .cafur-blue-text { color: #003366; } 
@@ -94,22 +106,35 @@
                     <li><strong>Social Media:</strong> Gestión y análisis de impacto con <strong>Metricool</strong>.</li>
                     <li><strong>Producción Audiovisual:</strong> Fotografía y edición profesional de activos inmobiliarios.</li>
                     <li><strong>Email Marketing:</strong> Diseño y envío de boletines informativos.</li>
-                    <li><strong>Branding:</strong> Adaptación creativa de la identidad visual en plantillas de Canva.</li>
+                    <li><strong>Branding:</strong> Adaptación creativa de la identidad visual de la marca.</li>
                 </ul>
             </div>
         </section>
 
-        <section style="text-align: center; background: #fdfdfd; padding: 50px; border: 1px dashed #003366; border-radius: 15px; margin-bottom: 80px;">
-            <h3 style="margin-top: 0;" class="cafur-blue-text">Visual Identity & Creative Templates</h3>
-            <p>He desarrollado recursos gráficos estratégicos en Canva para unificar la imagen de marca de Cafur.</p>
-            <a href="TU_ENLACE_CANVA" target="_blank" style="display: inline-block; padding: 15px 35px; background: #003366; color: white; text-decoration: none; border-radius: 5px; font-weight: bold; transition: 0.3s;">Ver Proyecto en Canva</a>
+        <h3 class="cafur-blue-text" style="text-align: center; margin-bottom: 30px; text-transform: uppercase; letter-spacing: 1px;">Social Media Content & Reels</h3>
+        
+        <section class="reels-grid">
+            <div class="reel-card">
+                <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DK-JPu8NT7q/" data-instgrm-version="14" style="width:100%;"></blockquote>
+            </div>
+            <div class="reel-card">
+                <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DKe7HpEP9LZ/" data-instgrm-version="14" style="width:100%;"></blockquote>
+            </div>
+            <div class="reel-card">
+                <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DH6XcOxuynb/" data-instgrm-version="14" style="width:100%;"></blockquote>
+            </div>
+            <div class="reel-card">
+                <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DHYi_1DP6Zv/" data-instgrm-version="14" style="width:100%;"></blockquote>
+            </div>
         </section>
 
-        </main>
+    </main>
 
     <footer style="text-align: center; padding: 60px 0; color: #ccc; font-size: 0.8rem; border-top: 1px solid #eee;">
         <p>&copy; 2025 Paloma Aguado | Real Estate Marketing Specialist</p>
     </footer>
+
+    <script async src="//www.instagram.com/embed.js"></script>
 
     <script>
         const contenedor = document.getElementById("media-principal");
