--- a/es/index.html
+++ b/es/index.html
@@ -43,7 +43,7 @@
 
         <div class="project-card">
             <a href="/palomaaguado.github.io/es/cafur.html">
-                <img src="/palomaaguado.github.io/es/proyectos/retail.jpg" alt="Cafur">
+                <img src="/palomaaguado.github.io/es/proyectos/cafur5.jpg" alt="Cafur">
                 <div class="overlay">
                     <div class="text">
                         Cafur<br>
