--- a/en/index.html
+++ b/en/index.html
@@ -30,7 +30,7 @@
         </div>
           <div class="project-card">
     <a href="https://palomitas09.github.io/palomaaguado.github.io/en/vivendex.html" style="text-decoration: none;">
-        <img src="/palomaaguado.github.io/es/proyectos/feed20%Vivendex.jpg" alt="Vivendex">
+        <img src="/palomaaguado.github.io/es/proyectos/feed%20Vivendex.jpg" alt="Vivendex">
         <div class="overlay">
             <div class="text">
                 Vivendex<br>
