--- a/en/index.html
+++ b/en/index.html
@@ -37,6 +37,17 @@
                 <span style="font-size: 0.7rem; opacity: 0.8;">More than a real estate agency</span>
             </div>
         </div>
+          <div class="project-card">
+            <a href="/palomaaguado.github.io/es/cafur.html">
+                <img src="/palomaaguado.github.io/es/proyectos/cafur5.jpg" alt="Cafur">
+                <div class="overlay">
+                    <div class="text">
+                        Cafur<br>
+                        <span>Strategy & Photography</span>
+                    </div>
+                </div>
+            </a>
+        </div>
     </main>
 </body>
 </html>
