--- a/en/index.html
+++ b/en/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paloma Aguado — Portfolio</title>
-    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css?v=4.3">
+    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css?v=4.4">
     <style>
-        /* Franja Superior Gris Carbón */
+        /* Estilo Serio y Corporativo */
         .top-bar {
             background-color: #2c2c2c; 
             height: 12px;
@@ -14,12 +14,12 @@
         }
 
         header {
-            padding: 50px 5% 30px 5%;
-            background-color: #ffffff;
+            padding: 60px 5% 40px 5%;
+            background-color: white;
         }
 
         .seccion-proyectos {
-            padding: 40px 5% 60px 5%;
+            padding: 20px 5% 40px 5%;
         }
 
         .titulo-seccion {
@@ -27,13 +27,12 @@
             text-transform: uppercase;
             letter-spacing: 3px;
             color: #2c2c2c;
-            border-bottom: 1px solid #eee;
-            padding-bottom: 15px;
-            margin-bottom: 40px;
-            font-weight: 400;
+            border-left: 3px solid #2c2c2c;
+            padding-left: 15px;
+            margin-bottom: 30px;
         }
 
-        /* Grid de 2 columnas */
+        /* Grid de 2 por fila */
         .proyectos-grid {
             display: grid;
             grid-template-columns: 1fr 1fr; 
@@ -43,43 +42,39 @@
         .proyecto-card {
             text-decoration: none;
             color: inherit;
-            display: block;
         }
 
         .proyecto-card img {
             width: 100%;
             height: 500px; 
             object-fit: cover;
-            border-radius: 2px;
-            transition: 0.4s ease;
+            border-radius: 4px;
+            transition: 0.3s;
         }
 
         .proyecto-card:hover img {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
         }
 
         .proyecto-card h3 {
-            margin-top: 20px;
-            font-size: 0.9rem;
+            margin-top: 15px;
+            font-size: 1rem;
             text-transform: uppercase;
             letter-spacing: 1px;
-            color: #333;
         }
 
-        /* Estilo para el Coming Soon */
+        /* Caja Coming Soon integrada en el estilo */
         .coming-soon-box {
-            background: #f7f7f7;
             height: 500px;
+            background: #f9f9f9;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: #bbb;
-            font-size: 0.8rem;
-            border-radius: 2px;
+            color: #ccc;
+            border-radius: 4px;
             text-transform: uppercase;
             letter-spacing: 2px;
-            border: 1px solid #eee;
+            font-size: 0.8rem;
         }
 
         @media (max-width: 768px) {
@@ -88,13 +83,13 @@
         }
     </style>
 </head>
-<body style="margin:0; font-family: sans-serif;">
+<body style="margin:0; font-family: sans-serif; background-color: white;">
 
     <div class="top-bar"></div>
 
     <header>
-        <h1 style="font-size: 2rem; margin:0; letter-spacing: -1px;">PALOMA AGUADO</h1>
-        <p style="color: #888; font-size: 0.9rem; margin-top: 5px; text-transform: uppercase; letter-spacing: 2px;">Content Creator & Marketing Specialist</p>
+        <h1 style="font-size: 2.5rem; margin:0; letter-spacing: -1px;">PALOMA AGUADO</h1>
+        <p style="color: #666; font-size: 1.1rem; margin-top: 10px;">Content Creator & Real Estate Marketing Specialist</p>
     </header>
 
     <main>
@@ -114,7 +109,7 @@
             </div>
         </section>
 
-        <section class="seccion-proyectos" style="background-color: #fafafa; border-top: 1px solid #f0f0f0;">
+        <section class="seccion-proyectos">
             <h2 class="titulo-seccion">Real Estate Strategy</h2>
             <div class="proyectos-grid">
                 
@@ -132,7 +127,7 @@
         </section>
     </main>
 
-    <footer style="padding: 60px 0; text-align: center; color: #ccc; font-size: 0.7rem; text-transform: uppercase; letter-spacing: 2px;">
+    <footer style="padding: 60px 0; text-align: center; color: #ccc; font-size: 0.8rem; text-transform: uppercase; letter-spacing: 2px; border-top: 1px solid #eee; margin-top: 40px;">
         <p>© 2025 Paloma Aguado</p>
     </footer>
 
