--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paloma Aguado | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <style>
         /* Charcoal top bar */
         .top-line {
@@ -33,24 +33,24 @@
             padding: 0 5% 50px 5%;
         }
 
-        /* ALINEACIÓN DE IMÁGENES: Esto fuerza que todas midan lo mismo */
+        /* Alineación uniforme de las tarjetas */
         .project-card {
-            height: 500px; /* Altura fija para todas las tarjetas */
+            height: 500px;
             overflow: hidden;
             position: relative;
         }
 
         .project-card img {
             width: 100%;
-            height: 100%; /* Ocupa todo el alto de la tarjeta */
-            object-fit: cover; /* Recorta la imagen para que llene el espacio sin deformarse */
+            height: 100%;
+            object-fit: cover;
             display: block;
         }
 
-        /* Estilo para el Coming Soon alineado con las fotos */
+        /* Estilo para el Coming Soon alineado */
         .coming-soon-placeholder {
             background-color: #f9f9f9;
-            height: 500px; /* Misma altura que las imágenes */
+            height: 500px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -67,7 +67,7 @@
                 grid-template-columns: 1fr;
             }
             .project-card, .coming-soon-placeholder {
-                height: 350px; /* Altura más baja en móviles */
+                height: 350px;
             }
         }
     </style>
@@ -78,9 +78,9 @@
     <header>
         <div class="logo">PALOMA AGUADO</div>
         <nav>
-            <a href="/palomaaguado.github.io/es/contacto.html">Contact</a> 
+            <a href="../es/contacto.html">Contact</a> 
             <span style="margin: 0 10px; color: #ccc;">|</span>
-            <a href="/palomaaguado.github.io/es/index.html">Español</a>
+            <a href="../es/index.html">Español</a>
         </nav>
     </header>
 
@@ -88,8 +88,8 @@
         <h2 class="section-title">Lifestyle & Brands</h2>
         <div class="gallery-grid">
             <div class="project-card">
-                <a href="/palomaaguado.github.io/en/kukicha.html">
-                    <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha">
+                <a href="kukicha.html">
+                    <img src="../es/proyectos/packaging.png" alt="Kukicha">
                     <div class="overlay">
                         <div class="text">
                             Kukicha<br>
@@ -107,8 +107,8 @@
         <h2 class="section-title">Real Estate Strategy</h2>
         <div class="gallery-grid">
             <div class="project-card">
-                <a href="/palomaaguado.github.io/en/cafur.html">
-                    <img src="/palomaaguado.github.io/es/proyectos/cafur5.jpg" alt="Cafur">
+                <a href="cafur.html">
+                    <img src="../es/proyectos/cafur5.jpg" alt="Cafur">
                     <div class="overlay">
                         <div class="text">
                             Cafur<br>
@@ -119,8 +119,8 @@
             </div>
 
             <div class="project-card">
-                <a href="/palomaaguado.github.io/en/vivendex.html">
-                    <img src="/palomaaguado.github.io/es/proyectos/feed%20Vivendex.jpg" alt="Vivendex">
+                <a href="vivendex.html">
+                    <img src="../es/proyectos/feed%20Vivendex.jpg" alt="Vivendex">
                     <div class="overlay">
                         <div class="text">
                             Vivendex<br>
