--- a/en/cafur.html
+++ b/en/cafur.html
@@ -65,7 +65,7 @@
 
     <header style="background-color: #003366; color: white; padding: 60px 5%; text-align: center;">
         <div class="logo" style="margin-bottom: 30px;">
-            <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: white; font-weight: bold; letter-spacing: 2px;">CAFUR</a>
+            <a href="/palomaaguado.github.io/en/index.html" style="text-decoration: none; color: white; font-weight: bold; letter-spacing: 2px;">CAFUR</a>
         </div>
         <h1 style="font-size: 2.5rem; text-transform: uppercase; margin-bottom: 15px;">Marketing & Audiovisual Production</h1>
         <p style="max-width: 700px; margin: 0 auto; opacity: 0.95; line-height: 1.6; font-weight: 300;">
