--- a/en/cafur.html
+++ b/en/cafur.html
@@ -74,7 +74,7 @@
     </header>
 
     <nav style="padding: 20px 5%;">
-        <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: #888; font-size: 0.9rem;">← Back to Projects</a>
+        <a href="/palomaaguado.github.io/en/index.html" style="text-decoration: none; color: #888; font-size: 0.9rem;">← Back to Projects</a>
     </nav>
 
     <main style="max-width: 1000px; margin: 0 auto; padding: 0 20px;">
